Product and Cart page added.

--- a/mobileStore/index.html
+++ b/mobileStore/index.html
@@ -95,7 +95,7 @@
           <div class="owl-carousel owl-theme">
             <div class="item py-2 bg-light">
               <div class="product font-raleway">
-                <a href="#"><img src="../assets/products/1.png" alt="product1" class="img-fluid"></a>
+                <a href="product.html"><img src="../assets/products/1.png" alt="product1" class="img-fluid"></a>
                 <div class="text-center">
                   <h6>Samsung Galaxy 10</h6>
                   <div class="rating text-warning font-size-12">
@@ -108,7 +108,8 @@
                   <div class="price py-2">
                     <span>$152</span>
                   </div>
-                  <button type="submit" class="btn btn-warning font-size-12">Add to Cart</button>
+                  <a href="cart.html" button type="submit" class="btn btn-warning font-size-12">Add to Cart</a>
+                  <!--  <button type="submit" class="btn btn-warning font-size-12">Add to Cart</button> -->
                 </div>
               </div>
             </div>
@@ -631,11 +632,11 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-3 col-12">
-            <h4 class="font-rubik font-size-20">Mobile Shopee</h4>
+            <h4 class="font-rubik font-size-20">Mobile Store</h4>
             <p class="font-size-14 font-rale text-white-50">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus, deserunt.</p>
           </div>
           <div class="col-lg-4 col-12">
-            <h4 class="font-rubik font-size-20">Newslatter</h4>
+            <h4 class="font-rubik font-size-20">News</h4>
             <form class="form-row">
               <div class="col">
                 <input type="text" class="form-control" placeholder="Email *">
@@ -668,7 +669,7 @@
     </footer>
     
     <div class="copyright text-center bg-dark text-white py-2">
-      <p class="font-rale font-size-14">&copy; Copyrights 2021. Desing y Daily Tuition. Modified by me.</p>
+      <p class="font-rale font-size-14">&copy; Copyrights 2021. Desing by Daily Tuition. Modified by me.</p>
     </div>
     <!-- !start #footer -->
     
